--- a/report/text/problemStatement.tex
+++ b/report/text/problemStatement.tex
@@ -4,6 +4,12 @@ Dansk: Forældre er ikke i stand til at hjælpe deres børn med at administrer d
 Dette medfører at børn får en forringet indlæringsevne, dårlig søvn rytme og mere.
 Hvordan kan smart home teknologi give forældrer de redskaber de behøver for at hjælpe deres børn med at administrer deres IT/TV forbrug?
 
+
+
 English: Parents are not able of helping their children administer their IT/TV consumption.
 This results in their kids getting a lessened learning ability, a bad sleeping pattern and more.
 How can smart home technology give parents the tools they need to help their children administer their IT/TV consumption?
+
+Edited version:
+How can hardware identification and webservices give parents the tools to help their children manage their media consumption. 
+(Childrens media consumptions is increasing, giving higher risks of type 2 diabetes.
