--- a/report/draft.tex
+++ b/report/draft.tex
@@ -42,6 +42,7 @@
 	% Part Solution
 	\part{Solution}
 	\input{text/database.tex}
+	\input{text/websiteImplementationAndDesign.tex}
 
 	%Part Perspective
 	\part{Perspective}
