--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -19,7 +19,7 @@ If this tendency is not dealt with, the risk for children getting type 2 diabete
 
 
 \section{Parental Control - How to extend it}
-As mentioned in a prevues section, parental control is commonly found in televisions, computers and internet-browsers. But none of these tools is meant to limit the usage of a device totally, they are able to do so, but it will result in parents having to enter passwords for their children every time they need to use the device.\\
+As previously mentioned parental control is commonly found in televisions, computers and internet-browsers. But none of these tools is meant to limit the usage of a device totally, they are able to do so, but it will result in parents having to enter passwords for their children every time they need to use the device.\\
 The idea behind this project, is to extend the normal parental control, so that a child has a limited usage of media, without having the constant interaction from parents. \\
 For the idea to be an improvement upon the existing parental control, it must be able to give the parents control over their children's media usage without forcing the parents to be around constantly. But simply restricting a child's media usage is not enough, for the idea to work. We believe it is also necessary to inspire the child to physical activity, maybe by helping out at the house?\\
 \\
@@ -42,6 +42,7 @@ We therefore decided that it would be better to create a device that could turn 
 For feature 4. we discussed if a mobile phone would be a good way to identify children, but this would encourage children to further use of electronic media, simply by giving them a mobile phone in the first place. We therefor came up with the idea to use RFID or NFC, to create small tags, which could be embedded into jewelry or key chains to identify the child.\\
 \\
 For feature 5. we did some serious consideration of how to motivate children in a way that would go along with the idea of the parental control system and we came up with the idea to implement chores into the system. In the belief that if a sort of point system was used to determine how much time a child would be able to use electronic media per week. Then a way to obtain extra points could be to do chores. Meaning if the child was attaining a habit of spending a lot of time using electronic media, the only way to attain more time would be to do chores which could then consist of moving the lawn or other physical exercises.\\
+\fixme{hvad med frihedaktiviteter som kan dækkes ind under rules?}
 \\
 This idea then boils down to these 3 key aspects:
 
