--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -2,5 +2,14 @@
 
 
 \section{Design}
+%Navigation
+%Interface Design
+%Color Schemes
+%Bootstrap and other inspiration sources
+%What you can do from the website, and how
 
 \section{Implementation}
+%AJAX
+%PHP
+%Database communication
+%JQuery
