--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -1,6 +1,45 @@
-\chapter{System Overview Design}
+\chapter{Overall System Design}
 
-%Tell how we intend the users to use it, both parents and children
+\section{Media Consumption Control System} %name our system
+The Media Consumption Control System (MCCS) is the system that are our solution on the problem statement. To give an overview of the complete system a rich picture have been made, see the figure \ref{fig:systemoverview}. The figure show a home environment with a TV (media), computer and a internet connection, and it show a server. 
+
+There are two main use pattern. The first is a parent who manage the their MCCS and uses the website from the PC to add, change or delete settings. This is pictured in the bottom left-side corner in figure \ref{fig:systemoverview}. 
+
+The second use pattern is pictured in the upper left corner of the figure. It is a child user who want to use a media and in this case watch television, but to see television power is needed and its power source is blocked by the controller. So the child need to scan his tag and then the controller sends a message to the server which then reply whether the television can be turned on. When the child is done he must scan again such that points can be withdraw from his user profile. When the child does not have any point he cannot turn on the television nor can he if a rule or permission do not allow it. If a parent wants to watch television without being restricted in any way he can make a rule that gives him unlimited access, but he would still need to scan his tag before and after using the television.
+
+\begin{figure}
+	\centering
+		\includegraphics[width=1.00\textwidth]{images/systemoverview.jpg}
+	\caption{system overview}
+	\label{fig:systemoverview}
+\end{figure}
+
+This is how the MCCS is supposed to work but some hardware and requirements to the system is needed. Previously we came to the conclusion that the following is needed.
+\begin{itemize}
+	\item A device to toggle the power of an electronic media
+	\item An individual key for each child that can be read by the device
+	\item A web-interface to set up rules, permissions and view/modify allowed usage of electronic media
+\end{itemize} 
+
+The first item is in the figure called a controller, the second is called a tag and the last is the website on the computer. In the following sections their specification will be explained further together with the decision of which hardware that are to be used. 
+\subsection{Tag and Controller}
+The tag used in this system is using Radio-frequency Identification (RFID). The tag need to be uniquely identified in the MCCS and it must uniquely identify its user. The tag is used in combination with the controller.
+
+The controller is a reader and an Arduino in this system and like the tag it need to be uniquely identified in the MCCS. The controller must be able to:
+
+\begin{itemize}
+	\item read the data from the tag
+	\item send messages to the servers API
+	\item temporary store the user that uses this controller
+	\item keep track of the time spent between the media usage began to it end
+\end{itemize}
+ 
+
+\subsection{MCCS's Website}
+
+
+
+
 %Symbolise use: TV, Controller, Reader, Tag, Child, Network Con, Laptop, Parent, Server
 %
 %Pull the list from the analysis and explain what we need to implement these features.
@@ -12,17 +51,7 @@
 	%\item A way to inspire children to physical activity
 %\end{enumerate}
 %
-%After we had figured out what the key features of the system was, we started brainstorming how to implement them.\\
-%To satisfy feature 1. and 2. we quickly decided to make an administration web-site, this was mainly due to the semester demands of building anything web related. Among other solutions could have been a desktop- or phone application.\\
-%\\
-%For feature 3. we came up with a few different solutions. One solution was to write code for a bunch of medias, that then would be able to work directly with the administration web-site, but this would force us to write code for every media device from every fabricator that we intended the usage of our idea on.\\
-%We therefore decided that it would be better to create a device that could turn the power on and off from a media instead. We are aware that this solution might influence some media in a bad way, but most media today is setup to handle a sudden disappearance of power.\\
-%\\
-%For feature 4. we discussed if a mobile phone would be a good way to identify children, but this would encourage children to further use of electronic media, simply by giving them a mobile phone in the first place. We therefor came up with the idea to use RFID or NFC, to create small tags, which could be embedded into jewelry or key chains to identify the child.\\
-%\\
-%For feature 5. we did some serious consideration of how to motivate children in a way that would go along with the idea of the parental control system and we came up with the idea to implement chores into the system. In the belief that if a sort of point system was used to determine how much time a child would be able to use electronic media per week. Then a way to obtain extra points could be to do chores. Meaning if the child was attaining a habit of spending a lot of time using electronic media, the only way to attain more time would be to do chores which could then consist of moving the lawn or other physical exercises.\\
-%\fixme{hvad med frihedaktiviteter som kan dækkes ind under rules?}
-%\\
+
 %This idea then boils down to these 3 key aspects:
 %
 %\begin{itemize}
@@ -30,11 +59,18 @@
 	%\item An individual key for each child that can be read by the device
 	%\item A web-interface to set up rules, permissions and view/modify allowed usage of electronic media
 %\end{itemize} 
+
+
+\section{general concepts}
+%Go into detail about rules, permission, chores
+\subsection{Rule}
+\subsection{Permission}
+\subsection{Chores}
+
+
+\section{System architecture}
 %Symbolise server: API, Website, Daemon, Server, connection to controller, connection to laptop
 
-%Go into detail about rules, chores
 
-%Explain difference of fields, explain each fields role without explaining how they are designed
 
-%Tell how we decided each features placement
 
