--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -1,6 +1,10 @@
 \chapter{Overall System Design}
+presentation of Media Consumption Control System, how the user need to use the system.\\
+present concepts chore, permission and rule.\\
+present parts of the system and their requirements. \\
+present system architecture. \\
 
-\section{Media Consumption Control System} %name our system
+\section{Media Consumption Control System} %name our system: temp name: Media Consumption Control System or MCCS
 The Media Consumption Control System (MCCS) is the system that are our solution on the problem statement. To give an overview of the complete system a rich picture have been made, see the figure \ref{fig:systemoverview}. The figure show a home environment with a TV (media), computer and a internet connection, and it show a server. 
 
 There are two main use pattern. The first is a parent who manage the their MCCS and uses the website from the PC to add, change or delete settings. This is pictured in the bottom left-side corner in figure \ref{fig:systemoverview}. 
@@ -14,63 +18,189 @@ The second use pattern is pictured in the upper left corner of the figure. It is
 	\label{fig:systemoverview}
 \end{figure}
 
-This is how the MCCS is supposed to work but some hardware and requirements to the system is needed. Previously we came to the conclusion that the following is needed.
+On the server there will be a database, files that generate the website, a Web service(API), and a Deamon. These elements of the system will be explained further in section \vref{sec:RequirMCCS} and after that the system architecture can be presented in section \vref{sec:sysArchitecture}. However, we need to explain some of the concepts that will be used in connection with this system.
+
+\section{General Design Concepts}
+%Go into detail about rules, permission, chores
+In the Media Consumption Control System there are a few concept that will be used though out the report. These are chore, permission and rules. The meaning of each will be explain in following sections.
+
+\subsection{Chore}
+A chore in the MCCS is a representation of a house chore that is to be done regally. We have included chore into this system to encourage children to help with the house chore with more time for media as a reward. Therefore each chore need a number of points which will be given when the child have done the house chore. 
+An example on a house chore could be to take out the garbage, then the chore in MCCS would have a name: 'take out garbage', possible a bigger description of the chore: 'remember to sort the garbage into the correct trash cans' and when the chore is done some points is given: '10'.  
+
+One disadvantage about the chore design is that the parent needs to use the website to award the child with points for doing a chore. We would have liked to automate it further, but to limit the scope of the project this would be future work.  
+
+\subsection{Permission}
+Permissions in this system is a time period in which the child user are allowed to use a specific media. Permission is included in the MCCS to give parents an easy way of controlling in which time period during the day the media can be used by the child. This can help the parents to get the children to bed in time since they cannot use the medias unless the parent allows it. It would especially be useful if the child has medias in his rooms such that the parents do not need to check whether the media is turned on or not. 
+
+The permission consist of:
+\begin{itemize}
+	\item a name of the permission
+	\item a representation for the time period, which would need a from time and a to time. 
+	\item a representation of days where the permission applies, which can be all days of the week or just some of them.
+	\item a representation of when it should be repeated, which can be:
+		\begin{itemize}
+		\item weekly
+		\item every second week
+		\item every third week
+		\item first in a month
+		\item last in a month
+		\end{itemize}
+\end{itemize}
+
+An example of a permission is Peter are allowed to use the TV each week day in the time period 17:00 to 19:00. The permission in the system would then have a time 17:00 (FromTime), a time 19:00 (ToTime), the day representation 'Monday, Tuesday, Wednesday, Thursday, Friday', and its repeated weekly.
+
+
+\subsection{Rule}
+In the system a rule can be many things the following is just a few examples of a rule:
+
+\begin{itemize}
+	\item any permission can also be written as a rule
+	\item it could be a statement like if the TV is turned on then the Playstation can be turn on
+	\item The first Monday in a month increase Peter's points by 100
+	\item Mom and Dad's profiles have unlimited and unrestricted access to each media
+\end{itemize}
+
+The rule has been included because that gives the user more powerful method to control the use of medias and to control the profiles in the MCCS.
+But there are one disadvantage of a rule it might be complicated for the user to understand how to use it and how to construct a rule so the design of how the user can make a rule need to be though through carefully.
+
+A rule should be connected to one or more user profiles since the rules otherwise would be unnecessary if no one should follow them. A rule consist of a name, a set of conditions and a set of actions. The condition and actions will be explained further in the following sections.
+
+\subsubsection{Action}
+
+An action is something that can or should be done if all of the conditions holds. An action always have a name, but this name is not user defined. The user have a choice from a list which can be found in the description below with an explanation of what it does and what other information is needed for the action.   
+
+\begin{description}
+	\item[Block user] it will block the profiles of all profile connected to the rule.
+	\item[Activate user] it will activate or re-activate the profiles of all profile connected to the rule.
+	\item[Add points] it will add points to all profile connected to the rule. Here the number of points is needed.
+	\item[Set maximum of point] it will set a maximum for the number of points that a profile can have. Here a number representing the maximum points is also needed. 
+	\item[Unlimited time] it will give the profile unlimited time to be spend on any media. 
+	\item[Access any] it will give the profile access to any media in the system.
+	\item[Access retracted] it will not give the profile access to any media. This is useful when the child is grounded.
+	\item[Access controller] it will give the profile access to a specific media. Here a controller need to be connected to the action.
+	\item[Turn on controller] it will give the profile permission to use a specific media. Here a controller need to be connected to the action.
+	\item[Turn off controller] it will turn off the media if one of the profile is using. Here a controller need to be connected to the action.
+\end{description}
+		
+-----write more here--------
+
+Since some of the action like 'Add points' need to be done automatically without further contract to the user. Therefore a background process called Deamon, is also needed in the MCCS but this will be explained further in section \ref{subsec:deamon}. 
+	
+	
+\subsubsection{Condition}
+
+
+\begin{description}
+		\item[Timestamp] 
+		\item[Controller on]
+		\item[Controller off]
+		\item[Timeperiode]
+		\item[True]
+		\item[False] 
+	\end{description}
+
+
+\subsubsection{Examples of Rules}
+%An example could be that the profile Peter gets point for each football training (the action) and the football training is Monday and Thursday from 18:00 to 19:30 each week (the condition). 
+%Another example could be that the family are going out every third Saturday at 18:00 and to get the children away from the media devices in time then the TV,PC and consoles must not be turn on from 17:30 to 18:00. Here the condition is its Saturday between 17:30 to 18:00 and its the third week. The action is all controllers turn off if the are on and the controllers must not be turned on. 
+-----------write here-------------
+
+
+\section{Requirements of the MCCS}
+\label{sec:RequirMCCS}
+
+In the analysis we came to the conclusion that the following items is necessary for the MCCS: 
 \begin{itemize}
 	\item A device to toggle the power of an electronic media
 	\item An individual key for each child that can be read by the device
 	\item A web-interface to set up rules, permissions and view/modify allowed usage of electronic media
 \end{itemize} 
 
-The first item is in the figure called a controller, the second is called a tag and the last is the website on the computer. In the following sections their specification will be explained further together with the decision of which hardware that are to be used. 
+
+The first item is called controller in this system, the second is the tag and the last is the website on the computer. But also new components of the system is necessary. As explain in the previous section a Deamon is needed to check the relevant rules and perform the appropriate actions if the conditions holds. Also during the following sections we find that a web service(API) is need. 
+
+In the following sections the specification of the website, controller and tag, web service and deamon will be explained further, before the design and implementation will be presented for each of them in the following chapters.  
+
+\subsection{MCCS's Website}
+A media consumption control system (MCCS) owner need a way to manage the system and for this a website will be made. There are several requirements for this website:
+
+\begin{itemize}
+	\item Register a new MCCS together with a user profile which is a manager of this system
+	\item Make it possible to add, edit and delete user profiles in an existing MCCS 
+	\item Make it possible to add, edit and delete Controllers from an existing MCCS
+	\item There should be a way to add, edit and delete Tags to the system. Also a tag should be connected to a user profile
+	\item There need to be an option to add, edit and delete rules, permissions and chores from a system
+	\item The user should be able to connect rules and permission with one or more user profiles. The connection should also be able to be removed without removing the rule or permission
+	\item When a chore is made in the real world by a child profile then by connecting this profile to a chore, points should be add to his points
+\end{itemize}
+
+There are also some requirements that is nice for the parents to use, but they are not essential for the MCCS system:
+
+\begin{itemize}
+	\item present the media consumption data as graphs or log such that the parent easy can get an overview of their children's media consumption 
+	\item present data from the MCCS in a calendar that shows rule and permission with profiles for whom this is relevant. The calendar should also show when a chore have been done and by who.
+\end{itemize}
+
+In chapter \fixme{insert ref} the design and implementation of the website will be presented in more detail. 
+ 
+
 \subsection{Tag and Controller}
 The tag used in this system is using Radio-frequency Identification (RFID). The tag need to be uniquely identified in the MCCS and it must uniquely identify its user. The tag is used in combination with the controller.
 
-The controller is a reader and an Arduino in this system and like the tag it need to be uniquely identified in the MCCS. The controller must be able to:
+The controller is an Arduino which is connected to a tag reader. Like the tag it need to be uniquely identified in the MCCS. The controller must be able to do the following.
 
 \begin{itemize}
-	\item read the data from the tag
-	\item send messages to the servers API
-	\item temporary store the user that uses this controller
-	\item keep track of the time spent between the media usage began to it end
+	\item Read the data from the tag
+	\item Send and receive messages from the server
+	\item Control the power source of the media 
+	\item Temporary store the tag id that activated this controller
+	\item Keep track of the time spent between the media usage began to it end
 \end{itemize}
  
+The design and implementation of the controller will be explained further in chapter \fixme{insert chapter ref}. 
 
-\subsection{MCCS's Website}
+The controller must communicate with the server and this is done via a web service.
 
+\subsection{The web service API}
 
+----write more here----
+Requirement:
+\begin{itemize}
+	\item Receive and send messages to the controller
+	\item From a tag and controller it should be able to determine whether a user may use the media which is connected to the controller
+	\item It must be able to subtract points from a user after he has been using a media
+	\item it should able to calculate when a controller should be turned off because of a rule, permission or point.
+\end{itemize}
 
-
-%Symbolise use: TV, Controller, Reader, Tag, Child, Network Con, Laptop, Parent, Server
-%
-%Pull the list from the analysis and explain what we need to implement these features.
-%\begin{enumerate}
-	%\item A way to set up permissions for which media and when they can be accessed
-	%\item A way to set up rules to make exceptions to these permissions
-	%\item A way to monitor/limit the usage of media used by a child
-	%\item A way to uniquely identify the child in the physical world
-	%\item A way to inspire children to physical activity
-%\end{enumerate}
-%
-
-%This idea then boils down to these 3 key aspects:
-%
-%\begin{itemize}
-	%\item A device to toggle the power of an electronic media
-	%\item An individual key for each child that can be read by the device
-	%\item A web-interface to set up rules, permissions and view/modify allowed usage of electronic media
-%\end{itemize} 
+-----write something here -------
 
 
-\section{general concepts}
-%Go into detail about rules, permission, chores
-\subsection{Rule}
-\subsection{Permission}
-\subsection{Chores}
+\subsection{Deamon}
+\label{subsec:deamon}
+-----write something here -------
+Requirement:
+\begin{itemize}
+	\item Check rules for when points should be add to a profile
+	\item -----more????----------------
+\end{itemize}
+-----write something here -------
 
 
-\section{System architecture}
+\section{System Architecture}
+\label{sec:sysArchitecture}
+
 %Symbolise server: API, Website, Daemon, Server, connection to controller, connection to laptop
+Now that all part of the Media Consumption Control System have been presented the overall system architecture can be explained. The MCCS is using the client server architecture and in the figure \ref{fig:serveroverview} it is presented.
 
+-------write more here----------------
 
+\begin{figure}
+	\centering
+		\includegraphics[width=1.00\textwidth]{images/serveroverview.jpg}
+	\caption{system architecture}
+	\label{fig:serveroverview}
+\end{figure}
+ 
 
 
