--- a/report/draft.tex
+++ b/report/draft.tex
@@ -41,6 +41,7 @@
 	
 	% Part Solution
 	\part{Solution}
+	\input{text/systemOverviewDesign.tex}
 	\input{text/database.tex}
 	\input{text/websiteImplementationAndDesign.tex}
 
