kilde update til dtabase

--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -50,6 +50,14 @@ note ={\url{http://www.biomedcentral.com/1471-2458/13/808}}
   edition =      {3th edition}
 }
 
+@Book{DatabaseKilde,
+  author =       {Abraham Silberschatz m.f.},
+  title =        {Database System Concepts},
+  publisher =    {McGraw-Hill},
+  year =         {2011},
+  edition =      {Sixth Edition}
+}
+
 @MISC{sundhedsstyrelsen,
 author = {Sundhedsstyrelsen},
 title = {FAKTA - BØRN OG BEVÆGELSE},
